# jungle-ams

./: .dockerignore  .env  .flake8  .gitignore  .pylintrc  .tool-versions  DEVELOP.md  LICENSE.md  README.md  env.bat  env.sh  local_requirements.txt  potential-threats-research.md  pyproject.toml  tasks.py
api/: .dockerignore  .gitignore  .vars  Dockerfile  alembic.ini  config.py  context.py  create-staging-service-accounts.sh  create_app.py  create_service_accounts.sh  default_values.py  deploy.sh  deployment-app.yaml  deployment-packager.yaml  deployment-web-front.yaml  deployment.yaml  docker-entrypoint.sh  exception_handlers.py  files_access.py  fix_sites_privileges.sh  http-route.yaml  httproute-web-front.yaml  install.sh  main.py  packager.py  persistent-volume.yaml  pyproject.toml  requirements_dev.txt  ruff.toml  run-ci.bat  run-ci.sh  run-lint.sh  sanitize_filename.py  scripts.py  service-web-front.yaml  service.yaml  telemetry_config.py  uv_entrypoint.py  websocket_script_test.py
api/alembic/: env.py
api/alembic_sqlite/: env.py
api/app/: .coverage  .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  alembic.ini  app.py  config.py  context.py  create_app.py  deployment.yaml  docker-entrypoint.sh  exception_handlers.py  exceptions.py  generate-bearer.sh  ingress.yaml  log_config.py  logging_config.py  main.py  prepare_git_cov_table.sh  print_ip_address.py  proxied_headers_middleware.py  pvc.yaml  pyproject.toml  pytest.ini  report.html  requirements.txt  run-ci.bat  run-ci.sh  run_ci_locally.sh  service.yaml  streaming.py  telemetry_config.py  upload_package.py  websocket_script_test.py
api/auth/: data.py
api/bulk-import/: .gitignore  README.md  bulk-ignore.txt  connection_pool.py  log_config.py  models.py  package_list.py  perforce.py  pyproject.toml  test_package_list.py  upload_packages.py
api/cache/: populate.py
api/canary/: Dockerfile  docker-entrypoint.sh  gather_stats.py  job_canary.py  telemetry.py  test_cube.hda
api/conf/: nginx.conf
api/content/: resolve_download_info.py  validate_filename.py
api/darol/: README.md
api/db/: connection.py  index.py  verify.py
api/edge/: generate_models.py  package.json  pnpm-lock.yaml  tsconfig.json  tsoa.json  vite.config.ts  wrangler.toml
api/events/: events.py  hautomation.py
api/gcs-proxy/: Dockerfile
api/genai/: Dockerfile  config.py  docker-entrypoint.sh  main.py  pyproject.toml
api/helm/: README.md  add_tag_for_stable_versions.sh  helm-gen-values-images.sh  helm-generate-version-values.sh  helm-install-staging.sh  helm-install.sh  helm-rollback-staging.sh  helm-test-prod.sh  helm-test-staging.sh  helm-upgrade-otel.sh  helm-upgrade-prod.sh  helm-upgrade-staging.sh  helm-upgrade-telemetry.sh  helm_rollback_staging.sh  install-secrets-staging.sh  push_upgraded_tag_and_all_version.sh  test.yaml
api/houdini/: .gitignore  Dockerfile  README.md  run-vm.sh  run.py
api/houdini-worker/: Dockerfile  docker-entrypoint.sh  houdini_worker.py  pyproject.toml
api/k8s/: cronjob-lets-encrypt-cert.yaml  debug-lets-encrypt-pod.yaml  deployment-app.yaml  deployment-gcs-proxy.yaml  deployment-lets-encrypt.yaml  deployment-packager.yaml  deployment-web-front.yaml  httphealthcheck-gcs-proxy.yaml  httphealthcheck-web-front.yaml  httproute-gcs-proxy.yaml  httproute-web-front.yaml  namespace-staging.yaml  namespace.yaml  role-lets-encrypt-secret-access.yaml  service-account-lets-encrypt.yaml  service-app.yaml  service-gcs-proxy.yaml  service-lets-encrypt.yaml  service-web-front.yaml
api/lets-encrypt/: Dockerfile  certbot-certonly.sh  certbot-renew.sh  generate-staging-cert.sh  nginx.conf  supervisord.conf  test-domains.py  update-secrets.sh
api/meshwork_sources/: events_table.py  job_results_table.py  register.py
api/middlewares/: exception_middleware.py  proxied_headers_middleware.py
api/nginx/: Dockerfile  build.sh  debug-entrypoint.sh  deploy.sh  docker-entrypoint.sh  fix_sites_privileges.sh  run.sh
api/packager/: Dockerfile  docker-entrypoint.sh  packager.py
api/profiles/: auth0_validator.py  invalidate_sessions.py  load_profile_and_roles.py  responses.py  start_session.py
api/publish-init/: .vars  Dockerfile  Pipfile  README.md  deploy.sh  entrypoint.py
api/queries/: assets.py  files.py
api/repos/: assets.py  events.py  tags.py
api/ripple_sources/: events_table.py  register.py
api/routes/: authorization.py  file_uploads.py
api/storage/: gcs_uploader.py  local_file_uploader.py  minio_uploader.py  storage_client.py
api/tags/: tag_models.py  type_utils.py
api/test-client/: Dockerfile  README.md  main.py  pyproject.toml
api/tests/: bind_test_routes.py  conftest.py  test_app_integration.py  test_asset_groups.py  test_auth_token.py  test_authorization.py  test_email_verification.py  test_events.py  test_id_generate.py  test_impersonate.py  test_jobs.py  test_orgs.py  test_profiles.py  test_readers.py  test_readers_websockets.py  test_tags.py
api/validate_email/: responses.py  verification.py
automation/blender/: Dockerfile  pyproject.toml  requirements.txt  workers.py
automation/controller/: file_cache.py  main.py  models.py  pyproject.toml  web_server.py  worker_controller.py  worker_lease.py
automation/genai/: Dockerfile  pyproject.toml  requirements.txt  server.py  workers.py
automation/houdini_hdk/: CMakeLists.txt  Dockerfile  coordinator.py  houdini_worker.C  run.sh  test_client.py  test_cube.hda
automation/test/: Dockerfile  README.md  pyproject.toml  requirements.txt  telemetry.py  workers.py
automation/workflow/: pyproject.toml  workers.py
automations/blender/: Dockerfile  README.md  pyproject.toml  workers.py
automations/genai/: Dockerfile  README.md  pyproject.toml  workers.py
codegen/: README.md  codegen.py  generate.sh  loader.py  meta-schema.json  pyproject.toml  schema-assets.yaml  schema-events.yaml  schema-graph.yaml  schema-jobs.yaml  schema-media.yaml  schema-profiles.yaml  schema-streaming.yaml  schema-tags.yaml  sqlmodel.mustache  to_python.py  to_typescript.py  typescript.mustache
test-worker/: Dockerfile  pyproject.toml  workers.py
(+5984 files in other folders)
