[tool.poetry]
name = "codegen"
version = "0.0.1"
description = "Schema code generator"
authors = ["Jacob Repp <jacobrepp@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/MythicaAI/infra/codegen"
repository = "https://github.com/MythicaAI/infra"
keywords = ["database", "sqlachemy", "schema", "codegen"]

[tool.poetry.dependencies]
python = "<4.0,>=3.10"
jsonschema = "4.23.0"

# Add development dependencies here
[tool.poetry.scripts]
codegen = "codegen:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
