[project]
name = "test-worker"
version = "0.1.0"
description = "Worker application for testing automation"
authors = [
    { "name" = "Jacob Repp", "email" = "jacobrepp@gmail.com" }
]
readme = "README.md"
license = "MPL-2.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.9.2",
    "opentelemetry-instrumentation>=0.48b0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "opentelemetry-distro>=0.48b0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "meshwork>=0.1.0",
    "gcid>=0.1.0" 
]

[project.urls]
Repository = "https://github.com/MythicaAI/jungle-ams"
