[tool.poetry]
name = "mythica-app"
version = "1.0.0"
description = "FastAPI service to provide asset services."
authors = ["Jacob Repp <jacobrepp@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/MythicaAI/infra/api/app"
repository = "https://github.com/MythicaAI/infra"
keywords = ["game assets", "file management", "sqlite", "cache", "graph", "games"]
package-mode = false

[tool.poetry.dependencies]
python = "<4.0,>=3.10"
minio = "^7.2.5"
sqlalchemy = "2.0.36"
asyncpg = "0.30.0"
psycopg2-binary = "^2.9.9"
google-auth = "^2.29.0"
google-cloud-storage = "^2.16.0"
fastapi = { version = "0.115.4", extras = ["standard"] }
pydantic-settings = "^2.3.0"
python-multipart = "0.0.17"
jinja2 = "^3.1.4"
sqlmodel = "0.0.22"
prometheus-fastapi-instrumentator = "^7.0.0"
typing-extensions = "^4.12.2"
alembic = "^1.13.1"
asyncio = "3.4.3"
python-json-logger = "2.0.7"
base58 = "2.1.1"
authlib = "1.3.2"
pyjwt = { version = "2.9.0",  extras = ["crypto"] }
fastapi-auth0 = "0.5.0"
starlette = "0.41.2"
tzdata = "2024.2"
websockets = "13.1"
redis = "5.2.0"
ripple = { path = "../../libs/python/ripple", develop = true }
cryptid = { path = "../../libs/python/cryptid", develop = true }
better-profanity = "^0.7.0"
opentelemetry-instrumentation = "^0.48b0"
opentelemetry-instrumentation-fastapi = "^0.48b0"
opentelemetry-instrumentation-httpx = "^0.48b0"
opentelemetry-exporter-otlp = "^1.27.0"
opentelemetry-distro = "^0.48b0"
opentelemetry-api = "^1.27.0"
opentelemetry-sdk = "^1.27.0"
opentelemetry-instrumentation-sqlalchemy = "^0.48b0"
uvicorn = "^0.32.0"
pydantic = "2.9.2"
email-validator = "2.2.0"

[tool.poetry.extras]
pgsql = ["psycopg2-binary"]
sqlalchemy = ["asyncio"]
authlib = []

[tool.poetry.group.dev.dependencies]
pytest = "8.2"
invoke = "2.2.0"
flake8 = "7.1.0"
httpx = "0.27.0"
munch = "4.0.0"
pylint = "3.2.3"
pytest-cov = "^5.0.0"
pytest-timeout = "2.3.1"
pytest-asyncio = "^0.24.0"
httpx-ws = "^0.6.0"

# Add development dependencies here
[tool.poetry.scripts]
start = "main:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
omit = [
    "tests/*",
]

[tool.pytest.ini_options]
addopts = "-p no:logging"
asyncio_mode = "auto"
