[tool.poetry]
name = "bulk-import"
version = "0.1.0"
description = "Bulk import HDA git repositories as packages"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
GitPython = "3.1.43"
munch = "4.0.0"
requests-toolbelt = "1.0.0"
PyGitHub = "2.3.0"

[tool.poetry.scripts]
start = "upload_packages:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
