[tool.poetry]
name = "houdini-worker"
version = "0.1.0"
description = "Processes Houdini jobs"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
munch = "4.0.0"
sqlalchemy = "2.0.31"
minio = "^7.2.5"
pydantic-settings = "^2.3.0"