[tool.poetry]
name = "mythica-test-client"
version = "0.0.1"
description = "Test client for Mythica API"
authors = [
    "Bohdan Krupa <bodya.krupa@gmail.com>",
    "Jacob Repp <jacobrepp@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/MythicaAI/infra/api/test-client"
repository = "https://github.com/MythicaAI/infra"
keywords = ["game assets", "file management", "sqlite", "cache", "graph", "games"]

[tool.poetry.dependencies]
python = "<4.0,>=3.10"
websockets = "13.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "8.2"
flake8 = "7.1.0"
httpx = "0.27.0"
pylint = "3.2.3"
pytest-cov = "^5.0.0"
pytest-timeout = "2.3.1"
pytest-asyncio = "^0.24.0"
httpx-ws = "^0.6.0"
munch = "4.0.0"
mythica-api-client = { path = "../../libs/python/mythica-api-client", develop = true }

# Add development dependencies here

[tool.poetry.scripts]
mythica-test-client = "mythica-test-client:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
omit = [
    "tests/*",
]

[tool.pytest.ini_options]
addopts = "-p no:logging"
asyncio_mode = "auto"
