[tool.poetry]
name = "blender"
version = "0.1.0"
description = ""
authors = ["pedromartello <pedro@mythica.ai>"]
readme = "README.md"
package-mode = false
repository = "https://github.com/MythicaAI/infra"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
bpy = "^4.3.0"

# use thie group to install the local dev dependencies
jax = {extras = ["cuda12"], version = "^0.5.0"}
numpy = "<2.0"

# use this group to install without dev redirects
aiofiles = "24.1.0"
[tool.poetry.group.infra.dependencies]
ripple = { path = "../../libs/python/ripple" }
cryptid = { path = "../../libs/python/cryptid" }

[tool.poetry.group.dev.dependencies]
ripple = { path = "../../libs/python/ripple", develop = true }
cryptid = { path = "../../libs/python/cryptid", develop = true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
