[tool.poetry]
name = "genai"
version = "0.1.0"
description = ""
authors = ["pedromartello <pedro@mythica.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
diffusers = "^0.30.1"
torch = "^2.4.0"
pillow = "^10.4.0"
transformers = "^4.44.2"
accelerate = "^0.33.0"
sentencepiece = "^0.2.0"
protobuf = "^5.28.0"
pydantic = "^2.8.2"
torchvision = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
