[tool.poetry]
name = "test-worker"
version = "0.1.0"
description = "Worker application for testing automation"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false
repository = "https://github.com/MythicaAI/infra"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "2.9.2"
opentelemetry-instrumentation = "^0.48b0"
opentelemetry-exporter-otlp = "^1.27.0"
opentelemetry-distro = "^0.48b0"
opentelemetry-api = "^1.27.0"
opentelemetry-sdk = "^1.27.0"

# use this group to install without dev redirects
aiofiles = "24.1.0"
[tool.poetry.group.infra.dependencies]
ripple = { path = "../../libs/python/ripple" }
cryptid = { path = "../../libs/python/cryptid" }

# use thie group to install the local dev dependencies
[tool.poetry.group.dev.dependencies]
ripple = { path = "../../libs/python/ripple", develop = true }
cryptid = { path = "../../libs/python/cryptid", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
