[tool.poetry]
name = "blender"
version = "0.1.0"
description = ""
authors = ["pedromartello <pedro@mythica.ai>"]
readme = "README.md"
package-mode = false
repository = "https://github.com/MythicaAI/infra"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
bpy = "^4.4.0"
meshwork = "^0.1.0"
gcid = "^0.1.0"

# use thie group to install the local dev dependencies
jax = {extras = ["cuda12"], version = "^0.5.0"}
#numpy = "<2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
