[tool.poetry]
name = "genai_api"
version = "0.1.0"
description = ""
authors = ["pedromartello <pedro@mythica.ai>"]
readme = "README.md"
package-mode = false
repository = "https://github.com/MythicaAI/infra"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
meshwork = "^0.1.0"
gcid = "^0.1.0"
pydantic = "^2.11.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
