[tool.poetry]
name = "imagemagick-worker"
version = "0.1.0"
description = "Worker application for image automations"
authors = ["Jacob Repp <jacobrepp@gmail.com>"]
readme = "README.md"
package-mode = false
repository = "https://github.com/MythicaAI/infra"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.11.7"
opentelemetry-instrumentation = "^0.48b0"
opentelemetry-exporter-otlp = "^1.27.0"
opentelemetry-distro = "^0.48b0"
opentelemetry-api = "^1.27.0"
opentelemetry-sdk = "^1.27.0"
wand = "^0.6.13"
meshwork = "^0.1.0"
gcid = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
