[tool.poetry]
name = "ripple"
version = "0.1.0"
description = "Library for the popogation of distributed parameterized jobs and their streams"
authors = [
    "Jacob Repp <jacob@mythica.ai>",
    "Kevin Calderone <kevin@mythica.ai",
    "Pedro "]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/MythicaAI/infra/libs/python/ripple"
repository = "https://github.com/MythicaAI/infra"
keywords = ["game assets", "file management", "streaming", "jobs"]


[tool.poetry.dependencies]
python = "<4.0,>=3.10"
pydantic-settings = "^2.3.0"
typing-extensions = "^4.12.2"
pydantic = "2.9.2"
python-json-logger = "2.0.7"
base58 = "2.1.1"
tzdata = "2024.1"
cryptography = "43.0.1"
cryptid = { path = "../cryptid", develop = true }
requests = ">=2.14.0"


[tool.poetry.group.dev.dependencies]
pytest = "8.2"
flake8 = "7.1.0"
munch = "4.0.0"
pylint = "3.2.3"
pytest-cov = "^5.0.0"
pytest-timeout = "2.3.1"

# Add development dependencies here
[tool.poetry.scripts]
start = "main:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
omit = [
    "tests/*",
]

[tool.pytest.ini_options]
addopts = "-p no:logging"
